@@ -245,15 +245,14 @@ impl_activate (TotemPlugin *plugin,
 
 	/* Load the default Totem setup */
 	path = totem_plugin_find_file (plugin, "totem_lirc_default");
-	if (path != NULL) {
-		if (lirc_readconfig (path, &pi->lirc_config, NULL) == -1) {
-			g_set_error (error, TOTEM_PLUGIN_ERROR, TOTEM_PLUGIN_ERROR_ACTIVATION,
-				     _("Couldn't read lirc configuration."));
-			close (fd);
-			return FALSE;
-		}
+	if (path == NULL || lirc_readconfig (path, &pi->lirc_config, NULL) == -1) {
 		g_free (path);
+		g_set_error (error, TOTEM_PLUGIN_ERROR, TOTEM_PLUGIN_ERROR_ACTIVATION,
+			     _("Couldn't read lirc configuration."));
+		close (fd);
+		return FALSE;
 	}
+	g_free (path);
 
 	/* Load the user config, doesn't matter if it's not there */
 	lirc_readconfig (NULL, &pi->lirc_config, NULL);
