@@ -1,5 +1,10 @@
 2008-07-30  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/lirc/totem-lirc.c (impl_activate): Also fail to load
+	if we're missing a data file
+
+2008-07-30  Bastien Nocera  <hadess@hadess.net>
+
 	* data/lirc_example:
 	* src/plugins/lirc/Makefile.am:
 	* src/plugins/lirc/totem-lirc.c (impl_activate):
